syntax = "proto3";

package agent.v1;

option go_package = "github.com/samkreter/kube-network-watcher/proto/agent/v1";

service AgentService {
    rpc StartNetworkWatch (StartNetworkWatchRequest) returns (StartNetworkWatchResponse);
    rpc StopNetworkWatch (StopNetworkWatchRequest) returns (StopNetworkWatchResponse);
}

message StartNetworkWatchRequest {}

message StopNetworkWatchRequest {}

message StartNetworkWatchResponse {}

message StopNetworkWatchResponse {}
